--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="card_radius">8dp</dimen>
     <dimen name="card_elevation">12dp</dimen>
     <dimen name="top_bar_padding">16dp</dimen>
+    <dimen name="animation_height">200dp</dimen>
+    <dimen name="animation_padding">16dp</dimen>
 </resources>
